[package]
name = "refunge"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = "0.27.0"
ratatui = "0.23.0"
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
lehmer = "3.0.0"
ctrlc-handler = "0.1.2"
textwrap = "0.16.0"
chrono = "0.4.26"
tui-textarea = "0.3.0"